--- a/config_module/package.json
+++ b/config_module/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.14"
+    "@types/react": "^17.0.14",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
