--- a/config_module/package.json
+++ b/config_module/package.json
@@ -10,6 +10,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "eslint": "^7.31.0",
