--- a/config_module/package.json
+++ b/config_module/package.json
@@ -52,5 +52,6 @@
   "devDependencies": {
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
