--- a/config_module/package.json
+++ b/config_module/package.json
@@ -13,13 +13,16 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "axios": "^0.21.1",
+    "apexcharts": "^3.29.0",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-charts": "^3.0.0-beta.33",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
     "react-icons": "^4.2.0",
