--- a/config_module/package.json
+++ b/config_module/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "framer-motion": "^4.1.17",
+    "normalizr": "^3.6.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
