--- a/config_module/package.json
+++ b/config_module/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.10",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "apexcharts": "^3.29.0",
@@ -37,6 +38,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
