--- a/config_module/package.json
+++ b/config_module/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.2.7",
     "@mui/system": "^5.2.6",
     "@reduxjs/toolkit": "^1.6.1",
