--- a/config_module/package.json
+++ b/config_module/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
+    "@types/javascript-time-ago": "^2.0.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.10",
@@ -28,6 +29,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "framer-motion": "^4.1.17",
+    "javascript-time-ago": "^2.3.11",
     "normalizr": "^3.6.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
