--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,11 +52,12 @@ services:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: scan_module_db
+    volumes:
+      - data:/var/lib/mysql
     ports:
       - '3306:3306'
     networks:
       - backend
-
 networks:
   backend:
     driver: bridge
