--- a/scanner_module/package.json
+++ b/scanner_module/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.4",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
