--- a/config_module/package.json
+++ b/config_module/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
     "react-icons": "^4.2.0",
+    "react-json-view": "^1.21.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -72,7 +73,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.31",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-syntax-highlighter": "^13.5.2"
   },
   "proxy": "http://localhost:3001"
 }
